--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.18",
     "@mui/material": "^5.15.18",
+    "@tanstack/react-query": "^5.51.23",
     "axios": "^1.6.7",
     "firebase": "^10.8.1",
     "react": "^18.2.0",
